--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     text-align: center;
     background-color: #fbb034;
     background-image: linear-gradient(315deg, #34b2fb 0%, #9fc5fd 74%);
-    padding: 5vh 5vh 5px 5vh;
+    padding: 5vh 5vw 5px 5vw;
     }
     h1,
     h3 {
@@ -21,7 +21,7 @@
     margin: 5vh auto;
     border: 3px solid rgb(31, 32, 23);
     width: 50%;
-    padding: 4vh;
+    padding: 4%;
     color: black;
     text-decoration: none;
     text-transform: uppercase;
@@ -33,18 +33,23 @@
     border-radius: 3vh;
     
     }
-    @media screen and (max-width: 900px){
-    .links{
-        width: 80%;
-       padding: 2vh;
-    }
 
-  }
-  @media screen and (max-width: 1000px){
-    .links{
-        width: 60%;
+    @media screen and (max-width: 1000px){
+        .links{
+            width: 68%;
+        }
     }
-}
+    @media screen and (max-width: 500px){
+    .links{
+        width: 90%;
+    }
+.fa, .fab{
+    font-size: 20px
+}  
+  }
+
+  
+
 .links:hover{
     background-color: seashell;
     color: rgb(0, 174, 255);
@@ -69,7 +74,7 @@
         margin-top: 5vh;
     }
     .git{
-        font-size: 3vh;
+        font-size: 15px;
         margin: 0;
     }
     
